  * Fixed superfluous error logs when checking if a string is a json object
  * Changed encoding for memory encryption from hex to base64 

  [ Gabriel Zachmann ]
  * Fixed a bug due to which oidc-agent would return a wrong already loaded
    account config when generating a new account config
  * Improved error handling when no authorization flow possible
  * Fixed a seg fault when dynamic client registration failed
  * Fixed a seg fault in memory decryption if account config does not have a
    client secret (public client)
  * Added support for PKCE
  * Added support for public clients
  * Fixed a bug where it was possible to display issuer urls that only differ
    in the trayling slash twice when using oidc-gen
  * Enforce usage of openid and offline_access scope in all cases

  [ Gabriel Zachmann ]
  * Improve error message when necessary scopes cannot be registered during
    dynamic client registration
  * If necessary scopes cannot be registered during dynamic client
    registration, a public client is tried
  * Fixed memory leaks
  * Allow updating of public clients by using the -m and --pub option

  [ Gabriel Zachmann ]
  * Added public client for aai.egi.eu

  [ Gabriel Zachmann ]
  * Changed the fundamental architecture by introducing a new proxy daemon
  * Now an account config can be updated by oidc-agent, i.e. when a provider
    issues a new refresh token
  * oidc-agent can manage the encryption password: store encrypted in memory,
    use keyring, use user provided command, or prompt the user
  * Add autoload possibility. If an application requests an access token for a
    not loaded config, it is automatically loaded, if the user allows it.
  * Add possibility that each usage of an account configuration has to be
    confirmed by the user. Can be turned of by using oidc-add -c or oidc-agent
    -c
  * Changed the oidc-agent console module flag from -c to -d
  * 

 -- Marcus Hardt <hardt@kit.edu>  Wed, 06 Feb 2019 13:29:45 +0100