@@ -812,256 +812,6 @@ oidc_error_t encryptAndWriteText(const char* text, const char* hint,
   return ret;
 }
 
-/**
- * @brief prompts the user and sets the account field using the provided
- * function.
- * @param account the account struct that will be updated
- * @param prompt_str the string used for prompting
- * @param set_callback the callback function for setting the account field
- * @param get_callback the callback function for getting the account field
- * @param passPrompt indicates if if prompting for a password. If 0 non password
- * prompt is used.
- * @param optional indicating if the field is optional or not.
- */
-void promptAndSet(struct oidc_account* account, char* prompt_str,
-                  void (*set_callback)(struct oidc_account*, char*),
-                  char* (*get_callback)(const struct oidc_account*),
-                  int passPrompt, int optional) {
-  char* input = NULL;
-  do {
-    if (passPrompt) {
-      input = promptPassword(prompt_str,
-                             strValid(get_callback(account)) ? " [***]" : "");
-    } else {
-      input =
-          prompt(prompt_str, strValid(get_callback(account)) ? " [" : "",
-                 strValid(get_callback(account)) ? get_callback(account) : "",
-                 strValid(get_callback(account)) ? "]" : "");
-    }
-    if (strValid(input)) {
-      set_callback(account, input);
-    } else {
-      secFree(input);
-    }
-    if (optional) {
-      break;
-    }
-  } while (!strValid(get_callback(account)));
-}
-
-void promptAndSetIssuer(struct oidc_account* account) {
-  if (!oidcFileDoesExist(ISSUER_CONFIG_FILENAME) &&
-      !fileDoesExist(ETC_ISSUER_CONFIG_FILE)) {
-    promptAndSet(account, "Issuer%s%s%s: ", account_setIssuerUrl,
-                 account_getIssuerUrl, 0, 0);
-  } else {
-    useSuggestedIssuer(account);
-  }
-  stringifyIssuerUrl(account);
-}
-
-void promptAndSetClientId(struct oidc_account* account) {
-  promptAndSet(account, "Client_id%s%s%s: ", account_setClientId,
-               account_getClientId, 0, 0);
-}
-
-void promptAndSetClientSecret(struct oidc_account* account, int usePubclient) {
-  promptAndSet(account, "Client_secret%s: ", account_setClientSecret,
-               account_getClientSecret, 1, usePubclient);
-}
-
-void promptAndSetScope(struct oidc_account* account) {
-  if (!strValid(account_getScope(account))) {
-    char* defaultScope = oidc_sprintf("%s", DEFAULT_SCOPE);
-    account_setScope(account, defaultScope);
-  }
-  promptAndSet(account,
-               "Space delimited list of scopes%s%s%s: ", account_setScope,
-               account_getScope, 0, 0);
-}
-
-void promptAndSetRefreshToken(struct oidc_account* account,
-                              struct optional_arg  refresh_token) {
-  if (refresh_token.useIt) {
-    if (refresh_token.str) {
-      account_setRefreshToken(account, oidc_strcopy(refresh_token.str));
-      return;
-    }
-    promptAndSet(account, "Refresh token%s%s%s: ", account_setRefreshToken,
-                 account_getRefreshToken, 0, 0);
-  }
-}
-
-short checkRedirectUrisForErrors(list_t* redirect_uris) {
-  if (redirect_uris == NULL || redirect_uris->len == 0) {
-    return 0;
-  }
-  short            err = 0;
-  list_node_t*     node;
-  list_iterator_t* it = list_iterator_new(redirect_uris, LIST_HEAD);
-  while ((node = list_iterator_next(it))) {
-    unsigned int port = getPortFromUri(node->val);
-    if (port == 0) {
-      printError("%s is not a valid redirect_uri. The redirect uri has to "
-                 "be in the following format: http://localhost:<port>[/*]\n",
-                 (char*)node->val);
-      err = 1;
-    } else if (port < MIN_PORT || port > MAX_PORT) {
-      printError("The port number has to be between %d and %d\n", MIN_PORT,
-                 MAX_PORT);
-      err = 1;
-    }
-  }
-  list_iterator_destroy(it);
-  return err;
-}
-
-void promptAndSetRedirectUris(struct oidc_account* account, int useDevice) {
-  char* input   = NULL;
-  char* arr_str = listToDelimitedString(account_getRedirectUris(account), ' ');
-  short err;
-  do {
-    input = prompt("Space separated redirect_uris [%s]: ",
-                   strValid(arr_str) ? arr_str : "");
-    if (strValid(input)) {
-      list_t* redirect_uris = delimitedStringToList(input, ' ');
-      secFree(input);
-      err = checkRedirectUrisForErrors(redirect_uris);
-      if (err) {
-        list_destroy(redirect_uris);
-        continue;
-      }
-
-      account_setRedirectUris(account, redirect_uris);
-    } else {
-      secFree(input);
-      err = checkRedirectUrisForErrors(account_getRedirectUris(account));
-      if (err) {
-        account_setRedirectUris(account, NULL);
-        secFree(arr_str);
-        arr_str = oidc_strcopy("");
-        continue;
-      }
-    }
-    if (account_refreshTokenIsValid(account) ||
-        (strValid(account_getUsername(account)) &&
-         strValid(account_getPassword(account))) ||
-        useDevice) {
-      break;  // redirect_uris only required if no refresh token and no user
-              // credentials provided
-    }
-    secFree(arr_str);
-    arr_str = listToDelimitedString(account_getRedirectUris(account), ' ');
-  } while (!strValid(arr_str) || err);
-  secFree(arr_str);
-}
-
-void promptAndSetUsername(struct oidc_account* account, list_t* flows) {
-  if (findInList(flows, FLOW_VALUE_PASSWORD)) {
-    promptAndSet(account, "Username%s%s%s: ", account_setUsername,
-                 account_getUsername, 0, 0);
-  }
-}
-
-void promptAndSetPassword(struct oidc_account* account, list_t* flows) {
-  if (findInList(flows, FLOW_VALUE_PASSWORD)) {
-    promptAndSet(account, "Password%s: ", account_setPassword,
-                 account_getPassword, 1, 0);
-  }
-}
-
-void promptAndSetCertPath(struct oidc_account* account,
-                          struct optional_arg  cert_path) {
-  if (cert_path.useIt && cert_path.str) {
-    account_setCertPath(account, oidc_strcopy(cert_path.str));
-    return;
-  }
-  if (!strValid(account_getCertPath(account))) {
-    unsigned int i;
-    for (i = 0; i < sizeof(possibleCertFiles) / sizeof(*possibleCertFiles);
-         i++) {
-      if (fileDoesExist(possibleCertFiles[i])) {
-        account_setCertPath(account, oidc_strcopy(possibleCertFiles[i]));
-        break;
-      }
-    }
-  }
-  if (cert_path.useIt) {
-    promptAndSet(account, "Cert Path%s%s%s: ", account_setCertPath,
-                 account_getCertPath, 0, 0);
-  }
-}
-
-void promptAndSetName(struct oidc_account* account, const char* short_name,
-                      char* client_name_id) {
-  if (short_name) {
-    char* name = oidc_strcopy(short_name);
-    account_setName(account, name,
-                    client_name_id ? oidc_strcopy(client_name_id) : NULL);
-  } else {
-    char* shortname = NULL;
-    while (!strValid(shortname)) {
-      secFree(shortname);
-      shortname = prompt("Enter short name for the account to configure: ");
-    }
-    char* client_identifier = NULL;
-    if (client_name_id) {
-      client_identifier = oidc_strcopy(client_name_id);
-    } else {
-      client_identifier =
-          prompt("Enter optional additional client-name-identifier []: ");
-    }
-    account_setName(account, shortname, client_identifier);
-    secFree(client_identifier);
-  }
-}
-
-void useSuggestedIssuer(struct oidc_account* account) {
-  list_t* issuers = getSuggestableIssuers();
-  char*   fav     = getFavIssuer(account, issuers);
-  printSuggestIssuer(issuers);
-  int i;
-  while ((i = promptIssuer(account, fav)) >= (int)issuers->len) {
-    printError("input out of bound\n");
-  }
-  if (i >= 0) {
-    struct oidc_issuer* issuer = secAlloc(sizeof(struct oidc_issuer));
-    issuer_setIssuerUrl(issuer, oidc_strcopy(list_at(issuers, i)->val));
-    account_setIssuer(account, issuer);
-  }
-  list_destroy(issuers);
-}
-
-int promptIssuer(struct oidc_account* account, const char* fav) {
-  char* input = prompt("Issuer [%s]: ", fav);
-  if (!strValid(input)) {
-    char* iss = oidc_strcopy(fav);
-    secFree(input);
-    struct oidc_issuer* issuer = secAlloc(sizeof(struct oidc_issuer));
-    issuer_setIssuerUrl(issuer, iss);
-    account_setIssuer(account, issuer);
-    return -1;
-  } else if (isdigit(*input)) {
-    int i = strToInt(input);
-    secFree(input);
-    i--;  // printed indices starts at 1 for non nerds
-    return i;
-  } else {
-    struct oidc_issuer* issuer = secAlloc(sizeof(struct oidc_issuer));
-    issuer_setIssuerUrl(issuer, input);
-    account_setIssuer(account, issuer);
-    return -1;
-  }
-}
-
-void stringifyIssuerUrl(struct oidc_account* account) {
-  int issuer_len = strlen(account_getIssuerUrl(account));
-  if (account_getIssuerUrl(account)[issuer_len - 1] != '/') {
-    account_setIssuerUrl(account,
-                         oidc_strcat(account_getIssuerUrl(account), "/"));
-  }
-}
-
 char* getEncryptionPassword(const char* forWhat, const char* suggestedPassword,
                             unsigned int max_pass_tries) {
   char*        encryptionPassword = NULL;
